--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "url": "https://github.com/nelsonealves/node-manguinho/issues"
   },
   "homepage": "https://github.com/nelsonealves/node-manguinho#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "typescript": "^4.6.4"
   }
 }
