--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/nelsonealves/node-manguinho#readme",
   "devDependencies": {
     "@types/jest": "^27.5.1",
+    "@types/validator": "^13.7.2",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "eslint": "^7.32.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
@@ -35,5 +36,8 @@
     "lint-staged": "^12.4.1",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
+  },
+  "dependencies": {
+    "validator": "^13.7.0"
   }
 }
